   * Added experimental campaign selection dialog (Only available when
     starting with --new-widgets.)
 * WML Engine:
   * Fix incorrect or doubled "sighted" events when delaying shroud update
   * Fix sometimes doubled "select" events
   * Fixed bug #13090: Make movement_costs < 1 behave like movement_costs = 1
 * Miscellaneous and bug fixes:
   * Align all network buffers on 4 bytes

Version 1.5.11:
 * Campaigns:
   * Descent into Darkness:
     * Removed the custom python AI used in 'A Haunting in Winter'
 * Campaign server:
   * Reject add-ons with an empty type.
   * Give warning note when the add-on version is invalid.
 * Editor2:
   * Fixed / worked around several filebrowser issues (save/load dialogs)
     (bugs #13033, #12771, #12625)
   * Fixed terrain palette issue when the palette was not full (bug #13012)
 * Graphics:
   * New or updated unit graphics: Merman Fighter line, Merman Hunter line
   * New idle animations: Heavy Infantryman
   * New portrait for the Javelineer, Gryphon, Elvish Sylph.
   * Moved and renamed story screen files:
     * titlescreen/landscapebattlefield.jpg -> story/landscape-battlefield.jpg
     * titlescreen/landscapebridge.jpg -> story/landscape-bridge.jpg
     * titlescreen/landscapecastle.jpg -> story/landscape-castle.jpg
 * Language and i18n:
   * updated translations: Czech, French, German, Hebrew, Lithuanian, Polish,
     Russian, Spanish
   * Fixed a problem that could lead to wrong cache being used, leading to
     some strings not being shown as translated (bug #12568)
 * Multiplayer:
   * server:
     * Create the fifo group accessible (instead of only user accessible).
 * Music and sound effects:
   * Added a campfire sound file for use with [sound_source] in
     sounds/ambient/.
   * The game will no longer restart the music on a scenario change or game 
     load if the currently played track is on the new scenario's playlist
 * User interface: